--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>banana speak</title>
+    <style>
+        textarea{
+            width: 80%;
+            display: block;
+            margin:1rem;
+            height:10vh;
+            padding:1rem
+        }
+    </style>
+    
    </head>
     <body>
     <h1>talk banana</h1>
+    <textarea id="txt-input"
+    placeholder="Write something to translate to banana"></textarea>
     <button id="btn-translate">Translate</button>
 
     <script src="app.js" type="text/javascript"></script>
