--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
             height:10vh;
             padding:1rem
         }
+        #output{
+         border:  1px solid black;
+         height: 10vh;
+         width: 80%;
+         margin: 1rem;
+         padding: 1rem;
+
+            
+        }
     </style>
     
    </head>
@@ -20,6 +29,8 @@
     <textarea id="txt-input"
     placeholder="Write something to translate to banana"></textarea>
     <button id="btn-translate">Translate</button>
+    <div>output will come here👇</div>
+    <div id="output"></div>
 
     <script src="app.js" type="text/javascript"></script>
  
